--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "marked": "^0.3.6",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.3",
+    "moment": "^2.19.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
