--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-loadable": "^5.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "0.18.2",
@@ -106,7 +107,8 @@
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
     "svg-sprite-loader": "^0.3.1",
-    "webpack-bundle-analyzer": "^2.9.2"
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dashboard": "^1.1.1"
   },
   "theme": {
     "hd": "2px"
